fixed hash tag spacing on wrapped lines

--- a/_sass/theme/_layout.scss
+++ b/_sass/theme/_layout.scss
@@ -293,9 +293,6 @@ ul.post-meta, ul.post-links {
   .tag {
     white-space: nowrap;
   }
-  .tag + .tag {
-    padding-left: 0.2em;
-  }
 }
 
 .post-link {
